fix contrast error by changing owner and date color on comment/move hte post btn closed to inpufield

--- a/frontend/src/styles/Comment.module.css
+++ b/frontend/src/styles/Comment.module.css
@@ -1,10 +1,14 @@
 .Owner {
     font-weight: bold;
-    color: #ff0000;
+    background: linear-gradient(135deg, #ff0000, #00bae2);
+    -webkit-background-clip: text; 
+    -webkit-text-fill-color: transparent;  
     margin-right: 8px;
   }
   
   .Date {
     font-weight: lighter;
-    color: #00bae2;
+    background: linear-gradient(135deg, #ff0000, #00bae2);
+    -webkit-background-clip: text; 
+    -webkit-text-fill-color: transparent;  
   }
